<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/ic_event_black_48dp"
            android:title="@string/navigation_item_1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_library_music_black_48dp"
            android:title="@string/navigation_item_2"/>

        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_chat_black_48dp"
            android:title="@string/navigation_item_3"/>

        <item
            android:id="@+id/navigation_item_4"
            android:title="@string/navigation_item_4"/>

        <item
            android:id="@+id/navigation_item_5"
            android:title="@string/navigation_item_5">
            <menu>
                <item
                    android:id="@+id/navigation_item_5_sub_1"
                    android:icon="@drawable/ic_place_black_48dp"
                    android:title="@string/navigation_item_5_sub_1"/>
                <item
                    android:id="@+id/navigation_item_5_sub_2"
                    android:icon="@drawable/ic_email_black_48dp"
                    android:title="@string/navigation_item_5_sub_2"/>
            </menu>
        </item>
    </group>
</menu>